# agro-app-backend

./: .gitignore  Cargo.toml
src/: database.rs  errors.rs  main.rs
src/handlers/: farmers.rs  mod.rs  products.rs
src/middleware/: mod.rs  validation.rs
src/models/: farm.rs  farm_activity.rs  farmer.rs  mod.rs  product.rs  verification.rs
src/services/: farmer_service.rs  mod.rs  sms_service.rs
src/utils/: mod.rs
