[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
default-run = "rust-backend"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
